# oscpipe

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
app/: Home.py
app/pages/: 1_Properties.py  2_Workstation.py
docs/: ARCHITECTURE.md  CUTOVER_CHECKLIST.md  RUNBOOK.md
docs/adr/: 0001-orchestration-layers.md  0002-dimer-functional.md  0003-job-resolution-seam.md  0004-screen-campaign-workflow.md  0005-orphan-prevention.md  0006-colocation-loopback-ssh.md
src/oscpipe/: __init__.py  run.py  settings.py
src/oscpipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oscpipe/analysis/: extrapolation.py  indo.py  marcus.py  uvvis.py
src/oscpipe/chem/: geometry.py  oligomer.py  smiles.py
src/oscpipe/cli/: main.py
src/oscpipe/dft/: gaussian.py
src/oscpipe/dispatch/: __init__.py  base.py  local.py  ssh.py
src/oscpipe/store/: cache.py  db.py  schema.sql
src/oscpipe/workflows/: lambda_h.py  screen.py  (+1 more)
tests/: _helpers.py  conftest.py  test_analysis_extrapolation.py  test_analysis_indo.py  test_analysis_marcus.py  test_analysis_uvvis.py  test_chem.py  test_chem_geometry.py  test_chem_oligomer.py  test_cli_batch.py  test_cli_export.py  test_cli_fetch.py  test_cli_lambda.py  test_cli_oligomer.py  test_cli_preflight.py  test_cli_reconcile.py  test_cli_screen.py  test_cli_status.py  test_cli_uvvis.py  test_dft_parse.py  test_dispatch_local.py  test_dispatch_ssh.py  test_dispatch_ssh_direct.py  test_e2e.py  test_real_workstation.py  test_run.py  test_settings.py  test_store.py
validation/: batch10.csv  batch_wf5.csv
